<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.NavigationActivity"
    tools:ignore="MergeRootFrame,UnusedResources">

    <com.lanan.navigation.draw.MyDraw
        android:id="@+id/path"
        android:layout_width="489dp"
        android:layout_height="489dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_margin="10dp" />

    <Button
        android:id="@+id/sendlocation"
        android:layout_width="244dp"
        android:layout_height="50dp"
        android:layout_alignStart="@+id/path"
        android:layout_alignTop="@+id/drawpath"
        android:text="@string/send_location" />

    <TextView
        android:id="@+id/nw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/path"
        android:layout_alignTop="@+id/path"
        android:text="@string/nw"
        android:textColor="#ffffff" />

    <TextView
        android:id="@+id/ne"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/path"
        android:layout_alignTop="@+id/path"
        android:text="@string/ne"
        android:textColor="#ffffff" />

    <TextView
        android:id="@+id/sw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/path"
        android:layout_alignStart="@+id/path"
        android:text="@string/sw"
        android:textColor="#ffffff" />

    <TextView
        android:id="@+id/se"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/path"
        android:layout_alignEnd="@+id/path"
        android:text="@string/se"
        android:textColor="#ffffff" />

    <Button
        android:id="@+id/drawpath"
        android:layout_width="244dp"
        android:layout_height="50dp"
        android:layout_below="@+id/path"
        android:layout_toEndOf="@+id/sendlocation"
        android:text="@string/draw_path" />

    <TextView
        android:id="@+id/showtext"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignStart="@+id/textView"
        android:layout_below="@+id/textView"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="10dp"
        android:background="#000000"
        android:fadeScrollbars="false"
        android:scrollbars="vertical"
        android:textColor="#ffffff"
        android:textSize="12sp" />

    <Button
        android:id="@+id/recvlocation"
        android:layout_width="244dp"
        android:layout_height="50dp"
        android:layout_alignStart="@+id/sendlocation"
        android:layout_below="@+id/sendlocation"
        android:text="@string/recv_location" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_toEndOf="@+id/path"
        android:text="@string/show_information"
        android:textSize="20sp" />

    <Button
        android:id="@+id/closeport"
        android:layout_width="244dp"
        android:layout_height="50dp"
        android:layout_alignStart="@+id/drawpath"
        android:layout_below="@+id/drawpath"
        android:text="@string/close_port" />

    <TextView
        android:id="@+id/lng"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView"
        android:layout_alignTop="@+id/textView"
        android:layout_marginStart="101dp"
        android:text="@string/longitude"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/lat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/lng"
        android:layout_below="@+id/lng"
        android:text="@string/latitude"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/longitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/lng"
        android:layout_toEndOf="@+id/lng"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/latitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/longitude"
        android:layout_below="@+id/longitude"
        android:textSize="12sp" />

</RelativeLayout>

