<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MainActivity"
    tools:ignore="MergeRootFrame">

    <com.lanan.navigation.draw.MyDraw
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:id="@+id/path"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_margin="10dp" />

    <Button
        android:layout_width="125dp"
        android:layout_height="30dp"
        android:text="@string/send_location"
        android:id="@+id/sendlocation"
        android:layout_alignTop="@+id/drawpath"
        android:layout_alignStart="@+id/path"
        android:textSize="12sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nw"
        android:id="@+id/nw"
        android:textColor="#ffffff"
        android:layout_alignStart="@+id/path"
        android:layout_alignTop="@+id/path"
        android:textSize="8sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ne"
        android:id="@+id/ne"
        android:textColor="#ffffff"
        android:layout_alignEnd="@+id/path"
        android:layout_alignTop="@+id/path"
        android:textSize="8sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sw"
        android:id="@+id/sw"
        android:textColor="#ffffff"
        android:layout_alignBottom="@+id/path"
        android:layout_alignStart="@+id/path"
        android:textSize="8sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/se"
        android:id="@+id/se"
        android:textColor="#ffffff"
        android:layout_alignBottom="@+id/path"
        android:layout_alignEnd="@+id/path"
        android:textSize="8sp" />

    <Button
        android:layout_width="125dp"
        android:layout_height="30dp"
        android:text="@string/draw_path"
        android:id="@+id/drawpath"
        android:layout_below="@+id/path"
        android:layout_toEndOf="@+id/sendlocation"
        android:textSize="12sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/showtext"
        android:background="#000000"
        android:textColor="#ffffff"
        android:layout_below="@+id/textView"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:scrollbars="vertical"
        android:textSize="8sp"
        android:fadeScrollbars="false"
        android:layout_alignStart="@+id/textView" />

    <Button
        android:layout_width="125dp"
        android:layout_height="30dp"
        android:text="@string/recv_location"
        android:id="@+id/recvlocation"
        android:layout_below="@+id/sendlocation"
        android:layout_toStartOf="@+id/drawpath"
        android:textSize="12sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/show_information"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/path"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:textSize="16sp" />

    <Button
        android:layout_width="125dp"
        android:layout_height="30dp"
        android:text="@string/close_port"
        android:id="@+id/closeport"
        android:layout_alignStart="@+id/drawpath"
        android:textSize="12sp"
        android:layout_alignTop="@+id/recvlocation" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/longitude"
        android:id="@+id/lng"
        android:textSize="12sp"
        android:layout_marginStart="15dp"
        android:layout_alignTop="@+id/textView"
        android:layout_toEndOf="@+id/textView" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/latitude"
        android:id="@+id/lat"
        android:textSize="12sp"
        android:layout_below="@+id/lng"
        android:layout_alignStart="@+id/lng" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/longitude"
        android:layout_alignTop="@+id/lng"
        android:layout_toEndOf="@+id/lng"
        android:textSize="12sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/latitude"
        android:textSize="12sp"
        android:layout_below="@+id/longitude"
        android:layout_alignStart="@+id/longitude" />

</RelativeLayout>

